--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
   "name": "ror-assignment",
   "private": true,
   "dependencies": {
-    "@rails/ujs": "^6.0.0",
-    "turbolinks": "^5.2.0",
+    "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/actioncable": "^6.0.0"
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "5.2.1",
+    "add": "^2.0.6",
+    "animate.css": "3.5.2",
+    "animsition": "^4.0.2",
+    "bootstrap": "4.6.0",
+    "daterangepicker": "^3.1.0",
+    "font-awesome": "^4.7.0",
+    "hamburgers": "^1.1.3",
+    "linearicons": "1.0.1",
+    "select2": "^4.1.0-rc.0",
+    "turbolinks": "^5.2.0",
+    "yarn": "^1.22.10"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.2"
+  }
 }
