--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "animate.css": "3.5.2",
     "animsition": "^4.0.2",
     "bootstrap": "4.6.0",
+    "countdowntime": "^0.0.3",
     "daterangepicker": "^3.1.0",
     "font-awesome": "^4.7.0",
     "hamburgers": "^1.1.3",
     "linearicons": "1.0.1",
+    "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
     "turbolinks": "^5.2.0",
     "yarn": "^1.22.10"
